--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"yourip.aternos.me",
-	"port": "25565",
+	"ip":"MR_545.aternos.me:54818.aternos.me",
+	"port": "54818",
 	"name": "afk_bot"
 }
